fix fix linechunked not showing in safari

--- a/src/app/subject/components/source-graphs/source-graphs.component.scss
+++ b/src/app/subject/components/source-graphs/source-graphs.component.scss
@@ -49,6 +49,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 100;
   padding-top: 56px;
   padding-bottom: 8px;
   width: 1px;
